Port english module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ name = "matasano_challenges"
 version = "0.0.1"
 authors = ["André Arko <andre@arko.net>"]
 
+[dependencies.english]
+path = "vendor/english"
+
 [dependencies.p]
 path = "vendor/p"
 
