--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["André Arko <andre@arko.net>"]
 [dependencies]
 openssl = "0.2.8"
 
+[dependencies.crypto]
+path = "vendor/crypto"
+
 [dependencies.decrypt]
 path = "vendor/decrypt"
 
